Update Neural Network (2).ipynb

--- a/Neural Network (2).ipynb
+++ b/Neural Network (2).ipynb
@@ -379,10 +379,10 @@
     "\n",
     "formula = 'DurationSecs ~ ' + ' + '.join(df_encoded.columns.difference(['DurationSecs']))\n",
     "model = smf.ols(formula=formula, data=df_encoded).fit()\n",
-    "predictions = lm.predict(nrl_test)\n",
+    "predictions = model.predict(nrl_test)\n",
     "y_test = nrl_test.DurationSecs\n",
     "y_train = nrl_train.DurationSecs\n",
-    "lm.summary()"
+    "model.summary()"
    ]
   },
   {
